--- a/package.json
+++ b/package.json
@@ -10,21 +10,24 @@
         "@types/node": "^16.11.52",
         "@types/react": "^18.0.17",
         "@types/react-dom": "^18.0.6",
+        "@vitejs/plugin-react": "^2.0.1",
+        "postcss": "^8.4.16",
+        "postcss-modules": "^5.0.0",
+        "postcss-px-to-viewport": "^1.1.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^8.0.2",
         "react-router-dom": "^6.3.0",
-        "react-scripts": "5.0.1",
         "redux": "^4.2.0",
         "redux-thunk": "^2.4.1",
         "typescript": "^4.7.4",
+        "vite": "^3.0.9",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "preview": "vite preview"
     },
     "eslintConfig": {
         "extends": [
