--- a/package.json
+++ b/package.json
@@ -1,8 +1,16 @@
 {
-    "name": "my-app",
-    "version": "0.1.0",
+    "name": "banyinbanying",
+    "version": "1.0.0",
     "private": true,
     "dependencies": {
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-redux": "^8.0.2",
+        "react-router-dom": "^6.3.0",
+        "redux": "^4.2.0",
+        "redux-thunk": "^2.4.1"
+    },
+    "devDependencies": {
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.3.0",
         "@testing-library/user-event": "^13.5.0",
@@ -11,15 +19,10 @@
         "@types/react": "^18.0.17",
         "@types/react-dom": "^18.0.6",
         "@vitejs/plugin-react": "^2.0.1",
+        "autoprefixer": "^10.4.8",
         "postcss": "^8.4.16",
-        "postcss-modules": "^5.0.0",
         "postcss-px-to-viewport": "^1.1.1",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-redux": "^8.0.2",
-        "react-router-dom": "^6.3.0",
-        "redux": "^4.2.0",
-        "redux-thunk": "^2.4.1",
+        "sass": "^1.54.5",
         "typescript": "^4.7.4",
         "vite": "^3.0.9",
         "web-vitals": "^2.1.4"
