feat: 配置不同的环境开关，支持连接后端本地

--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "dev": "vite",
-        "build": "tsc && vite build",
+        "dev": "vite --mode dev",
+        "pre": "vite --mode pre",
+        "local": "vite --mode loc",
+        "prod": "tsc && vite prod --mode prod",
         "preview": "vite preview"
     },
     "eslintConfig": {
