--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "eslint-plugin-react": "^7.31.0",
         "postcss": "^8.4.16",
         "postcss-px-to-viewport": "^1.1.1",
+        "prettier": "^2.7.1",
         "sass": "^1.54.5",
         "typescript": "^4.7.4",
         "vite": "^3.0.9",
