--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
         "@vitejs/plugin-react": "^2.0.1",
         "autoprefixer": "^10.4.8",
         "eslint": "^8.22.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "^7.31.0",
         "postcss": "^8.4.16",
         "postcss-px-to-viewport": "^1.1.1",
