--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,7 +4,7 @@
     "useTabs": false,
     "semi": false,
     "singleQuote": true,
-    "trailingComma": "all",
+    "trailingComma": "none",
     "bracketSpacing": true,
     "bracketLine": true,
     "jsxBracketSameLine": false,
