--- a/package.json
+++ b/package.json
@@ -1,7 +1,21 @@
 {
     "name": "banyinbanying",
     "version": "1.0.0",
-    "private": true,
+    "private": false,
+    "scripts": {
+        "dev": "vite --mode dev",
+        "pre": "vite --mode pre",
+        "local": "vite --mode loc",
+        "prod": "tsc && vite prod --mode prod",
+        "preview": "vite preview",
+        "postinstall": "husky install",
+        "prepack": "pinst --disable",
+        "postpack": "pinst --enable",
+        "lint": "eslint . --ext js,ts,tsx --cache",
+        "typecheck": "tsc -p src",
+        "prettier": "prettier --write --loglevel warn \"src/**/*.{js,ts,json,tsx,css,less,scss,html,md}\"",
+        "test": ""
+    },
     "dependencies": {
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -11,6 +25,8 @@
         "redux-thunk": "^2.4.1"
     },
     "devDependencies": {
+        "@commitlint/cli": "^17.0.3",
+        "@commitlint/config-conventional": "^17.0.3",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.3.0",
         "@testing-library/user-event": "^13.5.0",
@@ -26,6 +42,7 @@
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "^7.31.0",
+        "husky": "^8.0.1",
         "postcss": "^8.4.16",
         "postcss-px-to-viewport": "^1.1.1",
         "prettier": "^2.7.1",
@@ -33,21 +50,6 @@
         "typescript": "^4.7.4",
         "vite": "^3.0.9",
         "web-vitals": "^2.1.4"
-    },
-    "scripts": {
-        "dev": "vite --mode dev",
-        "pre": "vite --mode pre",
-        "local": "vite --mode loc",
-        "prod": "tsc && vite prod --mode prod",
-        "preview": "vite preview",
-        "lint": "eslint . --ext js,ts,tsx --cache",
-        "typecheck": "tsc -p src"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
     },
     "browserslist": {
         "production": [
