feat: 1 主题定制支持 2 初步布局 3 404页面开发 4 图片后缀支持 5 React引入一次eslint兼容 6 tags 组件开发部分 7 命令改动lint之前先执行prettier

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -9,5 +9,9 @@
     "bracketLine": true,
     "jsxBracketSameLine": false,
     "arrowParens": "avoid",
-    "proseWrap": "always"
+    "proseWrap": "always",
+    "files": [
+        "ts",
+        "tsx"
+    ]
 }
