--- a/package.json
+++ b/package.json
@@ -11,19 +11,24 @@
         "postinstall": "husky install",
         "prepack": "pinst --disable",
         "postpack": "pinst --enable",
-        "lint": "eslint . --ext js,ts,tsx --cache",
+        "lint": "yarn prettier && eslint . --ext js,ts,tsx --cache",
         "typecheck": "tsc -p src",
         "prettier": "prettier --write --loglevel warn \"src/**/*.{js,ts,json,tsx,css,less,scss,html,md}\"",
         "test": "",
         "lint-staged": "lint-staged"
     },
     "dependencies": {
+        "animate.css": "^4.1.1",
+        "antd": "^4.22.8",
+        "less": "^4.1.3",
         "react": "^18.2.0",
+        "react-custom-scrollbars": "^4.2.1",
         "react-dom": "^18.2.0",
         "react-redux": "^8.0.2",
         "react-router-dom": "^6.3.0",
         "redux": "^4.2.0",
-        "redux-thunk": "^2.4.1"
+        "redux-thunk": "^2.4.1",
+        "screenfull": "^6.0.2"
     },
     "devDependencies": {
         "@commitlint/cli": "^17.0.3",
@@ -46,9 +51,7 @@
         "husky": "^8.0.1",
         "lint-staged": "^13.0.3",
         "postcss": "^8.4.16",
-        "postcss-px-to-viewport": "^1.1.1",
         "prettier": "^2.7.1",
-        "sass": "^1.54.5",
         "typescript": "^4.7.4",
         "vite": "^3.0.9",
         "web-vitals": "^2.1.4"
